--- a/SFJ/app/src/main/res/drawable/select_bg.xml
+++ b/SFJ/app/src/main/res/drawable/select_bg.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="@color/color_0a94ff"/>
-    <corners android:radius="2dp"></corners>
+    <corners android:radius="15dp"></corners>
+    <gradient  android:startColor="#f7d5e3" android:angle="90"
+        android:centerColor="@color/white" android:endColor="#f7d5e3" android:gradientRadius="100dp"></gradient>
+    <stroke android:width="1dp" android:color="#e48bb7"></stroke>
 </shape>
