--- a/SFJ/app/src/main/res/layout/dialog_wait.xml
+++ b/SFJ/app/src/main/res/layout/dialog_wait.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="#ffffff"
-    android:padding="20.0dip">
+    android:layout_height="80dp"
+    android:background="#ffffff">
 
     <ProgressBar
         android:id="@+id/waiting_pb"
         style="@style/Widget.ProgressBar"
-        android:layout_width="32.0dip"
-        android:layout_height="32.0dip"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_centerVertical="true"
-        android:layout_marginRight="12.0dip"
+        android:layout_marginRight="12dp"
+        android:layout_marginLeft="20dp"
         android:indeterminate="true" />
 
     <TextView
+        android:maxLines="1"
         android:id="@+id/waiting_tv"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
