--- a/SFJ/app/src/main/res/layout/fragment_machine.xml
+++ b/SFJ/app/src/main/res/layout/fragment_machine.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/card_qiehuan"
             android:layout_margin="20dp"
             app:cardCornerRadius="2dp"
             app:cardElevation="2dp"
