--- a/SFJ/app/src/main/res/layout/item_text_view.xml
+++ b/SFJ/app/src/main/res/layout/item_text_view.xml
@@ -6,11 +6,14 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:layout_margin="10dp"
+        android:textSize="16sp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:textColor="@color/black"
         android:gravity="center"
-        android:background="@drawable/icon_control_check"
+        android:background="@drawable/select_bg_gray"
         android:id="@+id/tv_1"
-        android:layout_width="90dp"
-        android:layout_height="60dp" />
+        android:layout_marginTop="10dp"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content" />
 </LinearLayout>
