--- a/SFJ/app/src/main/res/values/styles.xml
+++ b/SFJ/app/src/main/res/values/styles.xml
@@ -15,7 +15,8 @@
     </style>
 
     <style name="dialog_waiting" parent="@android:style/Theme.Dialog">
-        <item name="android:windowBackground">@drawable/dialog_background</item>
+        <!--<item name="android:windowBackground">@drawable/dialog_background</item>-->
+
     </style>
 
     <!--自定义dialog背景全透明无边框theme -->
