--- a/SFJ/app/src/main/res/layout/fragment_machine.xml
+++ b/SFJ/app/src/main/res/layout/fragment_machine.xml
@@ -25,7 +25,6 @@
                 android:textColor="@color/black"
                 android:id="@+id/tv_name"
                 android:textSize="16sp"
-                android:text="施肥机1"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="20dp"
@@ -43,7 +42,7 @@
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:textSize="16sp"
-                android:text="在线"
+                android:text="离线"
                 android:layout_gravity="right|center_vertical"
                 android:background="@drawable/button_bg"
                 android:layout_width="wrap_content"
