--- a/SFJ/app/src/main/res/layout/fragment_control.xml
+++ b/SFJ/app/src/main/res/layout/fragment_control.xml
@@ -25,7 +25,6 @@
                 android:textColor="@color/black"
                 android:id="@+id/tv_name"
                 android:textSize="16sp"
-                android:text="施肥机1"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="20dp"
@@ -43,7 +42,7 @@
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:textSize="16sp"
-                android:text="在线"
+                android:text="离线"
                 android:layout_gravity="right|center_vertical"
                 android:background="@drawable/button_bg"
                 android:layout_width="wrap_content"
@@ -69,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="手动控制-灌溉电磁阀"
+            android:text="请选择灌溉电磁阀控制施肥机"
             android:textColor="@color/black" />
 
         <android.support.v7.widget.RecyclerView
@@ -79,41 +78,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
-        <LinearLayout
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp"
-            android:gravity="center_horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp"
-                android:paddingLeft="25dp"
-                android:paddingRight="25dp"
-                android:textColor="@color/black"
-                android:id="@+id/tv_ggsg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/select_bg_gray"
-                android:gravity="center"
-                android:text="灌溉水泵" />
-
-            <TextView
-                android:paddingBottom="4dp"
-                android:paddingTop="4dp"
-                android:paddingLeft="25dp"
-                android:paddingRight="25dp"
-                android:textColor="@color/black"
-                android:id="@+id/tv_jssg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/select_bg_gray"
-                android:gravity="center"
-                android:text="进水水泵" />
-        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
